name: th-toolkit
version: 0.1
synopsis: Template Haskell construction utilities
stability: Experimental
category: Template Haskell
homepage: https://github.com/nikita-volkov/th-toolkit
bug-reports: https://github.com/nikita-volkov/th-toolkit/issues
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2020 Nikita Volkov
license: MIT
license-file: LICENSE
build-type: Simple
cabal-version: >=1.10

source-repository head
  type: git
  location: git://github.com/nikita-volkov/th-toolkit.git

library
  hs-source-dirs: library
  default-extensions: BangPatterns, BlockArguments, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, DerivingVia, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, InstanceSigs, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, StrictData, TemplateHaskell, TupleSections, TypeApplications, TypeFamilies, TypeOperators, UnboxedTuples
  default-language: Haskell2010
  exposed-modules:
    THToolkit.Helpers
    THToolkit.Instances
    THToolkit.Lambdas
  other-modules:
    THToolkit.Prelude
  build-depends:
    base >=4.11 && <5,
    template-haskell >=2.15 && <3,
    template-haskell-compat-v0208 >=0.1.5 && <0.2,
    text >=1 && <2
